final change of part 3